--- a/cake.html
+++ b/cake.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cake Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Cake Recipe</h1>
 
     <img src="cake picture.jpeg" 
     alt="a picture of a piece of chocolate cake"
-    width="280" height="300">
+    width="280" height="300" class="center">
 
     <h4>Description</h4>
 
@@ -37,7 +38,8 @@
     <li>enjoy!</li>
 </ol>
 
-<a href="../index.html">Homepage</a>
+<a href="/home/odinproject/repos/odin-recipes/odin-recipes/index.html"><button>Homepage</button></a>
+
 
 </body>
 </html> 
