!!finished the odp recipes

--- a/hamburgers.html
+++ b/hamburgers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburger Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hamburger Recipes</h1>
@@ -11,7 +12,7 @@
     <img 
     src="/home/odinproject/repos/odin-recipes/recipes/big mac pic.jpeg"
     alt="a picture of a hamburger"
-    width="280" height="300">
+    width="280" height="300" class="center">
 
     <h4>Description</h4>
 
@@ -38,7 +39,8 @@
         <li>enjoy!</li>
     </ol>
 
-    <a href="../index.html">Homepage</a>
+    <a href="/home/odinproject/repos/odin-recipes/odin-recipes/index.html"><button>Homepage</button></a>
+
     
 </body>
 </html>
