--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
 <ul>
-   <li> <a href="/home/odinproject/repos/odin-recipes/recipes/hamburgers.html">Hamburgers</a></li>
-   <li>  <a href="/home/odinproject/repos/odin-recipes/recipes/pizza.html">Pizza</a></li>
-   <li>  <a href="/home/odinproject/repos/odin-recipes/recipes/cake.html">Cake</a></li>
+   <div class="homepage-recipe-list">
+    <li><a href="/home/odinproject/repos/odin-recipes/odin-recipes/hamburgers.html">Hamburgers</li></a>
+    <li>  <a href="/home/odinproject/repos/odin-recipes/odin-recipes/pizza.html">Pizza</a></li>
+   <li>  <a href="/home/odinproject/repos/odin-recipes/odin-recipes/cake.html">Cake</a></li></div>
 </ul>
 
 </body>
