--- a/pizza.html
+++ b/pizza.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -11,7 +12,7 @@
 
 <img src="/home/odinproject/repos/odin-recipes/recipes/pizza-picture.jpeg" 
 alt="a picture of a pepperoni pizza on top of a table"
-width="280" height="300">
+width="280" height="300" class="center">
 
 <H4>Description</H4>
 
@@ -36,7 +37,7 @@ width="280" height="300">
     <li>Voila - Serve and enjoy!</li>
 </ol>
 
-<a href="../index.html">Homepage</a>
+<a href="/home/odinproject/repos/odin-recipes/odin-recipes/index.html"><button>Homepage</button></a>
 
 </body>
 </html>
