modified for box model updates

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <li>  <a href="/home/odinproject/repos/odin-recipes/odin-recipes/pizza.html">Pizza</a></li>
    <li>  <a href="/home/odinproject/repos/odin-recipes/odin-recipes/cake.html">Cake</a></li></div>
 </ul>
-
+    <img src="/home/odinproject/repos/odin-recipes/recipes/big-pizza-picture.jpeg" class="fixed-pizza-homepage"height="200px"
+    width="200px"/>
+    <img src="/home/odinproject/repos/odin-recipes/recipes/big mac pic.jpeg" class="fixed-hamburger-homepage" height="200px"
+    width="200px"/>
+    <img src="/home/odinproject/repos/odin-recipes/recipes/cake picture.jpeg" class="fixed-cake-homepage" height="200px" width="200px" />
 </body>
 </html>
